fix image overlap of text in jumbotron.

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,21 @@ body {
   border: 2px solid gray;
   padding: .5em;
   margin: 10em, 10em, 10em, 10em;
+  float: inherit;
+  min-width: 300px;
   /* position: relative; */
   /* max-width: 66%; */
   /* top: 0; */
   /* left: 10%; */
   z-index: 20;
   /* width: 80%; */
+}
+
+.block {
+  display: block;
+  margin-right: 5em;
+  clear: right;
+
 }
 
 .backdrop {
@@ -42,11 +51,14 @@ body {
   z-index: 25;
   /* position: absolute; */
   float: right;
-  right: 130px;
+  /* right: 130px; */
+  right: 5em;
   top: 4em;
   width: 120px;
+  /* margin-left: 100em; */
   /* padding: 10px; */
   border: 5px solid gray;
+  clear: left;
 
 }
 
